# Root BUILD file for knowd
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "knowd",
    srcs = [],
    deps = [
        "//cmd/knowd",
        "//internal/server",
        "//internal/version",
    ],
    visibility = ["//visibility:public"],
)

# Default target for building the binary
exports_files([
    "go.mod",
])

# Make the knowd binary available as a top-level target
alias(
    name = "knowd-bin",
    actual = "//cmd/knowd",
    visibility = ["//visibility:public"],
)
