[project]
name = "pm4py-mcp"
version = "0.1.0"
description = "MCP server for PM4Py process mining analysis on OTel traces"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pm4py>=2.7.0",
    "tpot2",
    "requests",
    "pandas",
    "numpy",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
