load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "knowd_lib",
    srcs = ["main.go"],
    importpath = "github.com/unrdf/knowd/cmd/knowd",
    deps = [
        "//internal/server",
        "//internal/version",
    ],
)

go_binary(
    name = "knowd",
    embed = [":knowd_lib"],
    visibility = ["//visibility:public"],
)
